# asap-website-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FEATURE_FILE_UPLOAD.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  OPTIMIZATION_REDIS_CACHING.md  PHASE3_SUMMARY.md  README.md  REPONSE_PROMPTS.md  SECURITY.md  STUDIO_UX_ROADMAP.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.sqlx/: query-00748d7faa9117c38931071296fd93afaba911d6fde8a155be1c16dfc5422286.json  query-0082062d4089e944b87cf942d761302514d9e1323b1f91a25c4b7b2ab6147f1f.json  query-018e669c67d650f80ba3139a63319594097b583057e31adbcd96a862e222d131.json  query-01a07fbb3d5799a489a74c9eba9f4b2d70743d92098cc53d6d4425d000023dd6.json  query-0404cc6cdc85270f5ac9ec08547dea5012f2f6e36a1d8f17613f2107210b4c9b.json  query-04cb114a1d1d4e6a291bb1f0d702b041b471b4478552a94ea45a5584b3527566.json  query-0a7dc32511738fc72bc9014872b52673414f2aa7f0ac2de9a460a8fd687141bc.json  query-0eb6dccb2518cc5ea2ebdd382b30bdcce7271b83ddb776257f6e77ed61bf5fb3.json  query-0f92ba8cc943478ceb2ad8aebd891c3f89d0af0924865a68ea3dc9002c996543.json  query-0fe232b05199ced9225ed087852b6a8f2a30b93934287e713f99f9edc9948abb.json  query-13ca3691cc6d1ab40fd189e1ddd82f869869c8f9df501dabd31611a7b5dbaf06.json  query-1680e9804f1fdf76a6ecb5f4970d00f04331eaf6ef82589b60140ef1b6c5a063.json  query-17e480d105ab7132dc96f608fe3f94e0507fe97b876d8c941e01e7aba2268ac6.json  query-198a657ad08fad047f51c3a2b94f100fa70087b750fbbd5e9881e9d722424df0.json  query-1d8f0d792e525709feb7c022bf60d770cf7a661caa58a30c8676b414764445b6.json  query-218af62b9461d400459a3c741e833a08fb940e047d65721d837d333fede91991.json  query-22ac6236bfa749e285cef2f28601d550cb061cda6d18e14dd5a3ff05ed0b48e1.json  query-23e5169d11452a9c078c72c2aeeffc4e392c4f25f0feedd5217bd6d266f35085.json  query-23ef4ebc8b8758166c0c7fe910e77f23aead6918b06d2ac228ba483a4c887ac6.json  query-2499e7e7311487c9edbd80bfc91b7d152a9a532287231568ebfc5d905aa5d7bc.json  query-256cb0213dd3bac35e17247146c3a13bf7e82049f374d3940f7e93b4c2a755d5.json  query-25e06bcd89f9562db9e2e748370fb2d872e5f8211758f0fc31d5226a6589671a.json  query-26cb9ff0d5a5a50d5e7fba75fb3f5d3b7002c5c5a57005c0777b032d9203d3c2.json  query-274351b0768218c7c61db44cafac41c0e4c4f842fa79aa3c61e2416d420ec91c.json  query-2cd74a6eed5120d97ab46a85327cb0bce55a04dd01092a76b2508c46acbc3540.json  query-2d64f340e08f64cc2cba2c4ee2db571d47ba0279830bfd6967ac29b6c96bc408.json  query-2fc00d58ab71332571cf3029524b6ae85da8d9914185028f04c389e45e93136b.json  query-342962fc3c4ef134c27b33fe3a3f45c2ad30c2716d6fda88a9ed124845d4b9f6.json  query-3697766c2774b50523945b1a2707112fb3d2c660316a6c994044460a12bea9d1.json  (+84 more)
apps/api/: Cargo.toml
apps/api/src/: cache.rs  config.rs  db.rs  main.rs  pool.rs  portfolio_cache.rs  redis_pubsub.rs  website_cache.rs  websocket.rs
apps/api/tests/: websocket_test.rs
apps/worker/: Cargo.toml
apps/worker/src/: config.rs  db.rs  event_processor.rs  extension_executor.rs  file_cleanup.rs  main.rs  module_executor.rs  notification_publisher.rs  parallel_processor.rs  payment_reconciliation.rs  registry.rs  web_push.rs
core/ai/: Cargo.toml
core/ai/src/: config.rs  context.rs  error.rs  intent.rs  lib.rs  orchestrator.rs  rate_limiter.rs  router.rs  types.rs
core/ai/src/actions/: executor.rs  mod.rs  parser.rs
core/ai/src/providers/: anthropic.rs  mod.rs  openai.rs  traits.rs
core/ai/src/section_codegen/: compiler.rs  knobs.rs  mod.rs  validator.rs
core/ai/src/tools/: definitions.rs  executor.rs  mod.rs  types.rs
core/api/: Cargo.toml
core/api/src/: accounts.rs  administrators.rs  ai.rs  auth.rs  billing.rs  cleanup.rs  collections.rs  compression.rs  csrf.rs  events.rs  extensions.rs  files.rs  github.rs  helpers.rs  image_converter.rs  integrations.rs  lib.rs  metrics.rs  middleware.rs  modules.rs  notifications.rs  oauth.rs  onboarding.rs  payment_checks.rs  payments.rs  portfolios.rs  portfolios_cached.rs  queries.rs  rate_limit.rs  routes.rs  storage.rs  templates.rs  users.rs  webhooks.rs  websites.rs
core/api/src/ai/: actions.rs  cache.rs  context.rs  conversation.rs  conversations.rs  handlers.rs  helpers.rs  mod.rs  quota.rs  tools.rs  types.rs  vision.rs
core/api/src/ai/tools/: data.rs  mod.rs  screenshot.rs
core/api/src/auth/: account.rs  cookies.rs  login.rs  logout.rs  password.rs  password_reset.rs  refresh.rs  sessions.rs  signup.rs  types.rs
core/api/src/collections/: filters.rs  helpers.rs  items.rs  types.rs  variables.rs
core/api/src/files/: folders.rs  list.rs  mod.rs  upload.rs
core/api/src/notifications/: factory.rs  list.rs  mod.rs  push.rs  settings.rs
core/api/src/queries/: elements.rs  events.rs  extensions.rs  extensions_store.rs  mod.rs  modules.rs  presets.rs  sections.rs  tenant_modules.rs  types.rs  websites.rs
core/api/src/store/: install.rs  mod.rs  tests.rs
core/api/src/websites/: catalog.rs  core.rs  elements.rs  extensions.rs  mod.rs  modules.rs  pages.rs  presets.rs  public_site_data.rs  section_code.rs  section_module.rs  sections.rs  tenant_modules.rs
core/api/src/websites/pages/: crud.rs  detail.rs  list.rs  mod.rs  reorder.rs
core/notifications/: Cargo.toml
core/notifications/src/: lib.rs  service.rs  types.rs
core/notifications/src/email/: messages.rs  mod.rs  provider.rs  resend.rs
core/payments/: Cargo.toml
core/payments/src/: errors.rs  gateway.rs  lib.rs  models.rs  stripe_provider.rs
core/shared/: Cargo.toml  README.md
core/shared/src/: auth.rs  config.rs  cookies.rs  csrf.rs  errors.rs  extension_catalog.rs  extension_registry.rs  lib.rs  module_catalog.rs  password_reset.rs  pubsub.rs  refresh_token.rs  websocket.rs
docs/: API_SPEC.md  (+45 more)
extensions/analytics/: Cargo.toml  extension.toml
extensions/analytics/src/: lib.rs
modules/github-generator/: Cargo.toml
modules/github-generator/src/: client.rs  lib.rs  processor.rs
modules/notifications/: Cargo.toml
modules/notifications/src/: lib.rs  service.rs  types.rs
(+842 files in other folders)
