[workspace]
resolver = "2"
members = [
    "core/domain",
    "core/api",
    "core/shared",
    "core/payments",
    "core/notifications",
    "core/ai",
    "extensions/github-sync/backend",
    "apps/api",
    "apps/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ASAP Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.19"
oauth2 = "4.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.23", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

# HTTP client (for modules)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async traits
async-trait = "0.1"

# File upload & compression
multipart = "0.18"
bytes = "1.11"
flate2 = "1.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
futures = "0.3"

# Caching
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }

# WebSocket
tokio-tungstenite = "0.24"

# Testing
mockall = "0.12"
tokio-test = "0.4"

