[package]
name = "asap-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asap-core-domain = { path = "../../core/domain" }
asap-core-api = { path = "../../core/api" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Caching
redis = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }

# Observability
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest", "tower", "tracing"] }
sentry-tower = { version = "0.48", features = ["http"] }
sentry-tracing = "0.48"
