[package]
name = "asap-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asap-core-domain = { path = "../../core/domain" }
asap-github-generator = { path = "../../modules/github-generator", package = "asap-module-github-generator" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# Async utilities
futures = "0.3"

# Parallelism
num_cpus = "1.16"

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
