[package]
name = "asap-core-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asap-core-domain = { path = "../domain" }
asap-core-shared = { path = "../shared" }
asap-core-payments = { path = "../payments" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
oauth2 = { workspace = true }

# HTTP client (for OAuth)
reqwest = { workspace = true }
urlencoding = "2.1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# File handling
bytes = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
