[package]
name = "asap-core-notifications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asap-core-domain = { path = "../domain" }
asap-core-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
