[package]
name = "asap-core-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
