[package]
name = "asap-core-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asap-core-domain = { path = "../domain" }
anyhow.workspace = true
thiserror.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
# CSRF protection & password reset & refresh tokens
hmac.workspace = true
sha2.workspace = true
rand = "0.8"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1.23", features = ["v4"] }
toml = "0.9"

[dev-dependencies]
